# Agent_dream_cycle

./: .gitignore  .mcp.json  Dream_cycle_dashboard.jsx  README.md  SECURITY.md  build_job.py  config.example.json  config.yaml  config_schema.py  dream_cycle.py  lumen_mcp_server.py  perf_log.py  plugin_system.py  pyproject.toml  set_up.sh
agents/: example_agent.json
tests/: test_build_job.py  test_dream_cycle.py  test_experimentation.py  test_manifest_agents.py  test_manifest_agents_simple.py  test_perf_log.py  test_plugin_system.py  test_simple_plugin.py  test_utils.py
